--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "build": "tsc && chmod +x dist/cli.js",
     "build:watch": "tsc --watch",
     "start": "node dist/cli.js",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test:coverage": "jest --coverage --passWithNoTests",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx}\" \"tests/**/*.{ts,tsx}\"",
