fix: clean package.json bin path for npm publish
- Run npm pkg fix to clean package.json
- Remove ./ prefix from bin path (npm convention)
- Republish to fix registry propagation issue

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "bin": {
-    "prp": "./dist/cli.js"
+    "prp": "dist/cli.js"
   },
   "files": [
     "dist",
@@ -48,7 +48,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/dcversus/prp.git"
+    "url": "git+https://github.com/dcversus/prp.git"
   },
   "bugs": {
     "url": "https://github.com/dcversus/prp/issues"
