--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "env": {
     "node": true,
-    "es2020": true
+    "es2020": true,
+    "jest": true
   },
   "extends": [
     "eslint:recommended",
