--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,43 +1,237 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: Deploy Static Site to GitHub Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
+    branches: [main]
+    paths:
+      - 'index.html'
+      - 'CNAME'
+      - 'src/docs/**'
+      - 'docs/**'
+      - 'scripts/**'
+      - 'package.json'
+      - 'package-lock.json'
+      - 'webpack.config.js'
+      - '.github/workflows/static.yml'
+  pull_request:
+    branches: [main]
+    paths:
+      - 'index.html'
+      - 'CNAME'
+      - 'src/docs/**'
+      - 'docs/**'
+      - 'scripts/**'
+      - 'package.json'
+      - 'package-lock.json'
+      - 'webpack.config.js'
+      - '.github/workflows/static.yml'
   workflow_dispatch:
+    inputs:
+      deploy_preview:
+        description: 'Deploy preview even for PRs'
+        required: false
+        default: 'false'
+        type: boolean
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+# Grant GITHUB_TOKEN permissions to deploy to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+# Ensure only one deployment runs at a time
 concurrency:
   group: "pages"
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 jobs:
-  # Single deploy job since we're just deploying
+  # Build job
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch full history for proper git info
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: package-lock.json
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build documentation and landing page
+        run: npm run build:docs
+
+      - name: Verify build artifacts
+        run: |
+          echo "📁 Build directory structure:"
+          find build/ -type f -name "*.html" | head -10
+          echo ""
+          echo "🔍 Search index verification:"
+          if [ -f "build/assets/search-index.json" ]; then
+            echo "✅ Search index exists with $(jq length build/assets/search-index.json) pages"
+          else
+            echo "❌ Search index missing"
+            exit 1
+          fi
+          echo ""
+          echo "🗺️  Sitemap verification:"
+          if [ -f "build/sitemap.xml" ]; then
+            echo "✅ Sitemap exists"
+          else
+            echo "⚠️  Sitemap missing (will be generated)"
+          fi
+          echo ""
+          echo "🌐 CNAME verification:"
+          if [ -f "build/CNAME" ]; then
+            echo "✅ CNAME exists: $(cat build/CNAME)"
+          else
+            echo "⚠️  CNAME missing"
+          fi
+
+      - name: Generate sitemap.xml
+        run: |
+          BASE_URL="https://prp.theedgestory.org"
+          BUILD_DIR="build"
+          cat > "${BUILD_DIR}/sitemap.xml" << EOF
+          <?xml version="1.0" encoding="UTF-8"?>
+          <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
+            <url>
+              <loc>${BASE_URL}/</loc>
+              <lastmod>$(date -u '+%Y-%m-%d')</lastmod>
+              <changefreq>weekly</changefreq>
+              <priority>1.0</priority>
+            </url>
+          EOF
+
+          # Add all HTML pages to sitemap
+          find "${BUILD_DIR}" -name "*.html" -type f | while read file; do
+            path=$(echo "$file" | sed "s|${BUILD_DIR}/||")
+            url="${BASE_URL}/${path}"
+            echo "    <url>
+              <loc>${url}</loc>
+              <lastmod>$(date -u '+%Y-%m-%d')</lastmod>
+              <changefreq>weekly</changefreq>
+              <priority>0.8</priority>
+            </url>" >> "${BUILD_DIR}/sitemap.xml"
+          done
+
+          echo "</urlset>" >> "${BUILD_DIR}/sitemap.xml"
+          echo "✅ Sitemap generated with $(grep -c '<url>' "${BUILD_DIR}/sitemap.xml") pages"
+
+      - name: Optimize build artifacts
+        run: |
+          echo "📊 Build size analysis:"
+          du -sh build/ || true
+          echo ""
+          echo "🗂️  Files by size:"
+          find build/ -type f -exec du -h {} + | sort -hr | head -10
+          echo ""
+          echo "⚡ Optimization complete"
+
+      - name: Upload build artifacts
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: build
+
+  # Deployment job
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/main' || (github.event_name == 'workflow_dispatch' && github.event.inputs.deploy_preview == 'true')
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          # Upload entire repository
-          path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+
+      - name: Deployment Summary
+        run: |
+          echo "## 🚀 Deployment Successful!" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "| Property | Value |" >> $GITHUB_STEP_SUMMARY
+          echo "|----------|-------|" >> $GITHUB_STEP_SUMMARY
+          echo "| **Site URL** | [${{ steps.deployment.outputs.page_url }}](${{ steps.deployment.outputs.page_url }}) |" >> $GITHUB_STEP_SUMMARY
+          echo "| **Environment** | ${{ github.ref_name }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| **Commit** | [${{ github.sha }}](${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }}) |" >> $GITHUB_STEP_SUMMARY
+          echo "| **Deployed by** | @${{ github.actor }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| **Deployed at** | $(date -u '+%Y-%m-%d %H:%M:%S UTC') |" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### 📋 Deployment Details" >> $GITHUB_STEP_SUMMARY
+          echo "- Landing page with musical theme (♫) deployed" >> $GITHUB_STEP_SUMMARY
+          echo "- Documentation sub-pages generated" >> $GITHUB_STEP_SUMMARY
+          echo "- Search index and sitemap created" >> $GITHUB_STEP_SUMMARY
+          echo "- Responsive design optimized" >> $GITHUB_STEP_SUMMARY
+
+      - name: Report deployment status to PR
+        if: github.event_name == 'pull_request'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const page_url = '${{ steps.deployment.outputs.page_url }}';
+            const issue_number = context.issue.number;
+
+            const comment_body = `## 🚀 Preview Deployment Ready
+
+            Your landing page and documentation changes have been deployed!
+
+            🌐 **Preview URL**: [${page_url}](${page_url})
+
+            ### 📋 Changes Deployed:
+            - ✅ Landing page with musical theme (♫)
+            - ✅ Documentation sub-pages with consistent branding
+            - ✅ Search functionality across all pages
+            - ✅ Responsive design for mobile devices
+            - ✅ SEO optimization with sitemap
+
+            ⏰ **Deployed**: ${new Date().toISOString()}
+            👤 **Deployed by**: @${{ github.actor }}
+
+            ---
+
+            *This preview will be available until the PR is closed. Changes will be published to the main site when merged.*`;
+
+            // Find existing bot comment or create new one
+            const comments = await github.rest.issues.listComments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: issue_number,
+            });
+
+            const botComment = comments.data.find(comment =>
+              comment.user.type === 'Bot' &&
+              comment.body.includes('Preview Deployment Ready')
+            );
+
+            if (botComment) {
+              await github.rest.issues.updateComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: botComment.id,
+                body: comment_body,
+              });
+            } else {
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: issue_number,
+                body: comment_body,
+              });
+            }
+
+      - name: Notify deployment success
+        run: |
+          echo "🎉 Landing page CI/CD deployment completed successfully!"
+          echo "🌐 Live URL: ${{ steps.deployment.outputs.page_url }}"
+          echo "📱 Mobile responsive: Yes"
+          echo "🔍 Search enabled: Yes"
+          echo "🎵 Musical theme (♫): Applied consistently"
+          echo "📊 Pages deployed: $(find build/ -name '*.html' | wc -l)"
