feat: Update PRPs progress and prepare for deployment
- Merge PRP-11 and PRP-012 TypeScript fixes into comprehensive PRP
- Refocus PRP-008 on admin messaging guidelines with [*A] and [a] patterns
- Update PRP-001 with CLI bootstrap progress analysis
- Update PRP-007 with signal system implementation progress (65% complete)
- Add comprehensive TUI implementation specification with DoD and plan
- Remove duplicate TypeScript PRP backup file
- Prepare landing page deployment with proper CNAME configuration

Progress signals added across all PRPs for better tracking.

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "debug:demo": "tsx examples/debug-screen-demo.ts",
     "debug:test": "tsx src/tui/debug-screen.test.ts",
     "validate": "npm run typecheck && npm run lint && npm run test",
-    "build:docs": "webpack --mode production",
+    "build:docs": "webpack --mode production && node scripts/add-analytics.js",
     "dev:docs": "webpack serve --mode development",
     "prepublishOnly": "npm run validate && npm run build",
     "prepare": "husky"
