--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "ts-jest": "^29.2.5",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.46.2",
     "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1"
   },
